--- a/members/likitha.html
+++ b/members/likitha.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
             margin: 2rem auto;
             padding: 2rem;
             background: white;
-            box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
 
@@ -88,18 +89,20 @@
                 margin: 1rem;
                 padding: 1.5rem;
             }
-            
+
             h1 {
                 font-size: 1.8rem;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <div class="department">Department of Computer Science and Engineering</div>
-        <h1 class="title">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</h1>
-        <div class="university">University of South Carolina</div>
+        <h1 class="title">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across
+            Domains</h1>
+        <div class="university">Seminar Room 529, AI Institute (University of South Carolina)</div>
 
         <div class="details">
             <div class="detail-item">
@@ -116,11 +119,42 @@
             </div>
         </div>
 
+        <div class="details">
+            <div class="detail-item">
+                <strong>Committee</strong>
+                Dr. Michael Huhns, Dr. Vignesh Narayanan, Dr. Marco Valtorta, Dr. Sriraam Natarajan
+            </div>
+        </div>
+
         <div class="abstract">
             <h2>Abstract</h2>
-            <p>On the internet, where the number of available choices is exponentially growing, there is a need to prioritize and efficiently deliver relevant results to users, on demand. Recommendation systems (RSs) address this need by searching and filtering through large amounts of dynamically generated information and providing users with recommendations tailored to them. These systems have primarily focused on (1) single-user models, where recommendations are tailored towards a specific individual, or (2) single-item models, where items are recommended based on a broader appeal to users and similarities in item metadata, in the past. In many real-world scenarios, however, recommendation systems are often tailored to groups of users rather than individual users. This shift from single-user and towards group recommendation brings forth unique challenges such as addressing the diverse needs of a group, resolving conflicts and reaching consensus, assuring that groups receive fair recommendations without bias towards protected characteristics such as race, gender, and socioeconomic status; and ensuring that recommendations remain stable and adaptable even in response to dynamic and evolving environments. Such systems are growing increasingly relevant in disciplines such as team management, healthcare, online communities, and entertainment.</p>
-            <p>This dissertation explores and addresses the unique challenges of group recommendation systems (GRSs), such as increased computational complexity, varying group dynamics, and principles of trustworthy artificial intelligence (AI) related to bias, fairness, and robustness. The research makes contributions towards developing novel methods and metrics for GRSs, evaluating them with respect to performance through real-world case studies, such as team formation (project management) and meal planning (healthcare), and improving fairness and robustness of group recommendations. For team recommendation, the built system, called ULTRA, has been evaluated to demonstrate its effectiveness and generality in the context of research funding at academic institutions in the United States (US) and India. This work releases comprehensive datasets to aid in developing adaptable and reliable GRSs that optimize both performance and user satisfaction in dynamic environments. Beyond research, the dissertation is opening new avenues in entrepreneurship, intellectual property, and teaching resources.</p>
+            <p>On the internet, where the number of available choices is exponentially growing, there is a need to
+                prioritize and efficiently deliver relevant results to users, on demand. Recommendation systems (RSs)
+                address this need by searching and filtering through large amounts of dynamically generated information
+                and providing users with recommendations tailored to them. These systems have primarily focused on (1)
+                single-user models, where recommendations are tailored towards a specific individual, or (2) single-item
+                models, where items are recommended based on a broader appeal to users and similarities in item
+                metadata, in the past. In many real-world scenarios, however, recommendation systems are often tailored
+                to groups of users rather than individual users. This shift from single-user and towards group
+                recommendation brings forth unique challenges such as addressing the diverse needs of a group, resolving
+                conflicts and reaching consensus, assuring that groups receive fair recommendations without bias towards
+                protected characteristics such as race, gender, and socioeconomic status; and ensuring that
+                recommendations remain stable and adaptable even in response to dynamic and evolving environments. Such
+                systems are growing increasingly relevant in disciplines such as team management, healthcare, online
+                communities, and entertainment.</p>
+            <p>This dissertation explores and addresses the unique challenges of group recommendation systems (GRSs),
+                such as increased computational complexity, varying group dynamics, and principles of trustworthy
+                artificial intelligence (AI) related to bias, fairness, and robustness. The research makes contributions
+                towards developing novel methods and metrics for GRSs, evaluating them with respect to performance
+                through real-world case studies, such as team formation (project management) and meal planning
+                (healthcare), and improving fairness and robustness of group recommendations. For team recommendation,
+                the built system, called ULTRA, has been evaluated to demonstrate its effectiveness and generality in
+                the context of research funding at academic institutions in the United States (US) and India. This work
+                releases comprehensive datasets to aid in developing adaptable and reliable GRSs that optimize both
+                performance and user satisfaction in dynamic environments. Beyond research, the dissertation is opening
+                new avenues in entrepreneurship, intellectual property, and teaching resources.</p>
         </div>
     </div>
 </body>
+
 </html>
