--- a/members/likitha.html
+++ b/members/likitha.html
@@ -102,7 +102,7 @@
         <div class="department">Department of Computer Science and Engineering</div>
         <h1 class="title">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across
             Domains</h1>
-        <div class="university">Seminar Room 529, AI Institute (University of South Carolina)</div>
+        <div class="university">Seminar Room 529, AI Institute <br>University of South Carolina</div>
 
         <div class="details">
             <div class="detail-item">
@@ -115,14 +115,16 @@
             </div>
             <div class="detail-item">
                 <strong>Date</strong>
-                February 14, 2025
+                February 14, 2025: 10:00 AM - 11:30 AM
             </div>
         </div>
 
         <div class="details">
             <div class="detail-item">
                 <strong>Committee</strong>
-                Dr. Michael Huhns, Dr. Vignesh Narayanan, Dr. Marco Valtorta, Dr. Sriraam Natarajan
+                Exam Chair:&emsp;&emsp;&emsp;Dr. Michael Huhns<br>
+                Members:&emsp;&emsp;Dr. Vignesh Narayanan, Dr. Marco Valtorta, Dr. Sriraam Natarajan
+                (External)
             </div>
         </div>
 
