--- a/members/likitha.html
+++ b/members/likitha.html
@@ -122,8 +122,8 @@
         <div class="details">
             <div class="detail-item">
                 <strong>Committee</strong>
-                Exam Chair:&emsp;&emsp;&emsp;Dr. Michael Huhns<br>
-                Members:&emsp;&emsp;Dr. Vignesh Narayanan, Dr. Marco Valtorta, Dr. Sriraam Natarajan
+                Examination Chair: Dr. Michael Huhns<br>
+                Members: Dr. Vignesh Narayanan, Dr. Marco Valtorta, Dr. Sriraam Natarajan
                 (External)
             </div>
         </div>
