--- a/members/likitha.html
+++ b/members/likitha.html
@@ -114,8 +114,8 @@
                 Dr. Biplav Srivastava
             </div>
             <div class="detail-item">
-                <strong>Date</strong>
-                February 14, 2025: 10:00 AM - 11:30 AM
+                <strong>Date and Time</strong>
+                February 14, 2025 <br>10:00 AM - 11:30 AM
             </div>
         </div>
 
