--- a/index.html
+++ b/index.html
@@ -115,9 +115,16 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">February</div>
 
+                      
                       <div class="timeline-content">
-                        <p>A prestigious recognition (VAIBHAV - <a href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
-                          target="_blank">announcement</a>) received for work in summer with <a href="https://iitbhu.ac.in/">IIT-BHU</a> on using AI and sensors 
+                        <p>PhD dissertation defense - Likitha will present on <a href='https://ai4society.github.io/members/likitha'
+                          target="_blank">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</a>) (Friday, Feb 14). 
+                        </p>
+                      </div>
+                      
+                      <div class="timeline-content">
+                        <p>A prestigious recognition received - (VAIBHAV - <a href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
+                          target="_blank">announcement</a>) for work in summer with <a href="https://iitbhu.ac.in/">IIT-BHU</a> on using AI and sensors 
                           for recommending and monitoring Yoga asanas; was 1 among 17 selected from 216 competing globally 
                            (2025-2028).
                         </p>
