--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                       
                       <div class="timeline-content">
                         <p>PhD dissertation defense - Likitha will present on <a href='https://ai4society.github.io/members/likitha'
-                          target="_blank">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</a>) (Friday, Feb 14). 
+                          target="_blank">Building Trustable Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</a>, (Friday, Feb 14). 
                         </p>
                       </div>
                       
