--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <p> A new funding recieved - <a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false'
                           target="_blank">NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>, 
                           on Large Language Models and Planning (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                          target="_blank">project page).
+                          target="_blank">project page</a>).
                         </p>
                       </div>
 
