--- a/funding/index.html
+++ b/funding/index.html
@@ -42,7 +42,9 @@
                 <!-- As Principal Investigator (PI) -->
                 <h3>As Principal Investigator (PI)</h3>
                 <ul class="funding-list pi-list">
-                    <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  [Foundation Models, Planning, Demonstration]      
+                    <li> NSF, 2025-2027, <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false"> NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>  
+                          (see also: <a href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                          target="_blank">project page</a>). [Foundation Models, Planning, Demonstration]      
                         <span class="tag tag-government-source">Government</span> </il>
                     <li> JP Morgan Chase research award, <!-- $70K, --> 2023-2025, Automatically Generating Composable Trust Certificates for Blackbox AI Systems in Finance and Assessing their Impact on End Users [AI Ethics, Testing]      
                         <span class="tag tag-fund-type">Gift</span>
