--- a/members/likitha.html
+++ b/members/likitha.html
@@ -156,6 +156,43 @@
                 performance and user satisfaction in dynamic environments. Beyond research, the dissertation is opening
                 new avenues in entrepreneurship, intellectual property, and teaching resources.</p>
         </div>
+
+        <h2>Photos</h2>
+        <div class="details">
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/1.jpg" alt="1" style="width:100%;">
+            </div>
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/2.jpg" alt="2" style="width:100%;">
+            </div>
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/3.jpg" alt="3" style="width:100%;">
+            </div>
+        </div>
+        <div class="details">
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/4.jpg" alt="1" style="width:100%;">
+            </div>
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/5.jpg" alt="2" style="width:100%;">
+            </div>
+        </div>
+        <div class="details">
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/6.png" alt="1" style="width:100%;">
+            </div>
+        </div>
+        <div class="details">
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/7.png" alt="1" style="width:100%;">
+            </div>
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/8.jpg" alt="2" style="width:100%;">
+            </div>
+            <div class="detail-item">
+                <img src="dissertation_likitha_photos/9.jpg" alt="3" style="width:100%;">
+            </div>
+        </div>
     </div>
 </body>
 
