--- a/members/likitha.html
+++ b/members/likitha.html
@@ -157,6 +157,34 @@
                 new avenues in entrepreneurship, intellectual property, and teaching resources.</p>
         </div>
 
+        <div class="abstract">
+            <h2>Research Questions and Findings</h2>
+            <ol>
+                <li><b>Can effective group recommendation methods be created with only open data? Under what input
+                        constraints will the results be non-trivial?</b> <br>
+                    <b>Finding:</b><i>Effective group recommendation methods can indeed be created driven by open data,
+                        but
+                        the output results depend on sufficient and non-trivial constraints such as diversity and data
+                        completeness.</i>
+                </li>
+                <li><b>Will users accept the resulting recommendations from algorithms versus their own current
+                        practices?</b> <br>
+                    <b>Finding:</b><i>Users generally accept algorithm-generated recommendations when it is demonstrated
+                        they can benefit over manual practices, especially in terms of cost, time, and overall
+                        quality.</i>
+                </li>
+                <li><b>Can group methods for teaming be trusted with respect to fairness and robustness?</b> <br>
+                    <b>Finding:</b><i>The proposed methods show improvements in fairness (with evaluation of robustness
+                        pending) by addressing underlying algorithmic bias and incorporating fairness considerations for
+                        fairer outcomes.</i>
+                </li>
+                <li><b>Can the proposed methods be generalized beyond teaming, and to other domains?</b><br>
+                    <b>Finding:</b><i>The proposed methods are generalizable and show potential to be adapted to other
+                        domains as well by making reasonable domain-specific modifications.</i>
+                </li>
+            </ol>
+        </div>
+
         <h2>Photos</h2>
         <div class="details">
             <div class="detail-item">
