--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
                       <div class="timeline-content">
-                        <p>PhD dissertation defense - Likitha successfully defended on the topic <a
+                        <p>PhD dissertation - Likitha successfully defended on the topic <a
                             href='https://ai4society.github.io/members/likitha' target="_blank">Building Trustable
                             Methods for Group Recommendations: Advancing Fairness and Robustness Across Domains</a>,
                           (Friday, Feb 14).
