--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -36,14 +36,15 @@
           </h2>
 
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
-            <mark style="color:red;"><b>NEW!</b></mark>
+            <mark style="color:red;"><b>NEW: </b></mark>
             <a href="elections_2024.html" style="text-decoration: none;">
               <b>Get a glimpse of how ElectionBots, built with SafeChat, are being used in the South Carolina Elections
                 2024!</b>
             </a>
-            See demo and participate in user studies.
+            See a demo, compare alternative approaches, and participate in user studies.
             <br>
-            <!-- <mark style="color:red;"><b>!!!</b></mark> -->
+            
+            <mark style="color:red;"><b>Code repository: </b></mark>
             <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank" style="text-decoration: none;" >
               <b>Use our SafeChat framework from our GitHub repository </b>
             </a>
