updating ai 4 public missions workshop info

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         "Mar 1": "<strong>No Scheduled Events</strong>",
         "Mar 2": "<strong>No Scheduled Events</strong>",
         "Mar 3": `<strong>Workshop:</strong>
-            <p>Vansh: Poster Presentation / AI Mission @?time</p>`,
+            <p>Vansh: Poster Presentation / <a href="https://sites.google.com/view/ai-public-missions-workshop">AI for Public Missions</a> Workshop</p>`,
         "Mar 4": `<strong>Workshop:</strong>
             <p><a href='publications/papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf' target='_blank'>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI Dialog States and Beliefs</a> - Bharath</p>
             <p style="color: #e74c3c; font-weight: bold;">Time: 10:00-10:30am</p>`
