--- a/index.html
+++ b/index.html
@@ -301,7 +301,8 @@
       const scheduleData = {
         "Feb 24": "<strong>Arrival and Networking Event</strong>",
         "Feb 25": `<strong>Lab/ Tutorial:</strong>
-            <p><a href='https://aaai.org/conference/aaai/aaai-25/tutorial-and-lab-list/#LQ01' target='_blank'>SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control</a> 
+            <p><a href='https://aaai.org/conference/aaai/aaai-25/tutorial-and-lab-list/#LQ01' target='_blank'>SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control (<a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">GitHub</a>)
+</a> 
             - Vishal</p>
             <p style="color: #e74c3c; font-weight: bold;">Room: 115C | Time: 10:45am-12:30pm</p>`,
         "Feb 26": `<strong>Bridge Sessions:</strong>
