--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -35,11 +35,9 @@
             Generalized Planning
           </h2>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
-              style="color:red;"><b>NEW!</b></mark> Our lab titled 'Harnessing Large Language Models for Planning: A Lab
-            on Strategies for Success and Mitigation of Pitfalls' has been accepted for presentation at
-            <b><i>AAAI 2024</i></b></a>. The event will take place in <b><i>Vancouver, Canada</i></b> on <b><i>February
-                21, 2024</i></b>. For more information about the lab, you can visit our <a target="_blank"
-              href="https://sites.google.com/view/llmsxplanning-lab/home">website.</a>
+              style="color:red;"><b>NEW!</b></mark> Our lab titled 'SOFAI Lab: A Hands-On Guide to Building Neurosymbolic Systems with Metacognitive Control' has been accepted for presentation at
+            <b><i>AAAI 2025</i></b></a>. The event will take place in <b><i>Philadelphia, USA</i></b> on <b><i>February
+                25, 2025</i></b>. For more information about the lab, you can visit our <a href="https://github.com/ai4society/sofai_tool/tree/main" target="_blank">GitHub</a>
           </p>
           <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Generative Models for
                 Automated Planning</b></span><br>
