--- a/publications/index.html
+++ b/publications/index.html
@@ -138,7 +138,7 @@
                             and How to Improve for Informed Electoral Participation</b>
                                 <br>
                                 <i>TrustNLP workshop at Annual Conference of the North American Chapter of the 
-                                    Association for Computational Linguistics (NAACL 2025), Albuquerque, USA, 2025
+                                    Association for Computational Linguistics (NAACL 2025), Albuquerque, USA, May 2025
                                 </i> <br>
                                 Vipula Rawte, Deja N Scott, Gaurav Kumar, Aishneet Juneja, 
                                  Bharat Sowrya Yaddanapalli, Biplav Srivastava,         
