--- a/publications/index.html
+++ b/publications/index.html
@@ -112,6 +112,7 @@
                                 <br>
                                 <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
                                     target="_blank">[Paper]</a>
+                                <a href="./presentations/AAAI-AIElectionVision-Feb2025.pdf" target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Elections</span>
                                 <br>
