--- a/members/likitha.html
+++ b/members/likitha.html
@@ -144,7 +144,7 @@
                 recommendations remain stable and adaptable even in response to dynamic and evolving environments. Such
                 systems are growing increasingly relevant in disciplines such as team management, healthcare, online
                 communities, and entertainment.</p>
-            <p>This dissertation explores and addresses the unique challenges of group recommendation systems (GRSs),
+            <p> This dissertation explores and addresses the unique challenges of group recommendation systems (GRSs),
                 such as increased computational complexity, varying group dynamics, and principles of trustworthy
                 artificial intelligence (AI) related to bias, fairness, and robustness. The research makes contributions
                 towards developing novel methods and metrics for GRSs, evaluating them with respect to performance
@@ -183,6 +183,13 @@
                         domains as well by making reasonable domain-specific modifications.</i>
                 </li>
             </ol>
+        </div>
+
+        <div class="abstract">
+            <h2>Related Work</h2>
+            <p>More details about further work can be found <a
+                    href="https://ai4society.github.io/projects/group_rec/index.html">here</a>.
+            </p>
         </div>
 
         <h2>Photos</h2>
