--- a/publications/index.html
+++ b/publications/index.html
@@ -94,7 +94,7 @@
                                 Approach and Evolving Categories Representing Shifting Perspectives, 
                                 </b><br>
                                 <i>Proceedings of the 35th International Conference on Automated Planning and 
-                                Scheduling (ICAPS), 2025, Melbourne, Australia, Nov 2025</i><br>
+                                Scheduling (ICAPS), 2025, Melbourne, Australia, Nov 2025 (Planning, LLMs, AR=22.8%)</i><br>
                                 Vishal Pallagani, Nitin Gupta, Bharath Chandra Muppasani, Biplav Srivastava, 
                                 <br>
                                 <!-- <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
