--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -71,7 +71,7 @@
           <p><i><b>Representative Publications</b></i></p>
           <ul>
 
-            <li>A Vision for Reinventing Credible Elections with Artificial Intelligence<br>
+            <li><b></b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b><br>
                 <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
                                     Feb 2025</i><br>
                 Biplav Srivastava <br>
