--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -97,7 +97,7 @@
               <li><b>Disseminating Authentic Public Messages using Chatbots - A Case Study with
                                     ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
                                     Information in South Carolina</b><br>
-              <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+              <i>AI for Public Mission Workshop at Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
                                     Feb 2025</i><br>
                  Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav
                                 Srivastava<br>
