--- a/publications/index.html
+++ b/publications/index.html
@@ -154,7 +154,7 @@
                             <li><b>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI
                                     Dialog States and Beliefs</b>
                                 <br>
-                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                <i>Generalized Planning Workshop at the Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
                                     Feb 2025</i><br>
                                 Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
                                 <br>
@@ -169,7 +169,7 @@
                                     ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
                                     Information in South Carolina</b>
                                 <<br>
-                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                <i>AI for Public Mission Workshop at the Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
                                     Feb 2025</i><br>
                                 Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav
                                 Srivastava
