--- a/publications/index.html
+++ b/publications/index.html
@@ -97,8 +97,8 @@
                                 Scheduling (ICAPS), 2025, Melbourne, Australia, Nov 2025 (Planning, LLMs, AR=22.8%)</i><br>
                                 Vishal Pallagani, Nitin Gupta, Bharath Chandra Muppasani, Biplav Srivastava, 
                                 <br>
-                                <!-- <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
-                                    target="_blank">[Paper]</a> -->
+                                <a href='papers_local/litevol.pdf'
+                                    target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Planning</span>
                                 <br>
