home page update

--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -45,6 +45,51 @@
           <div class="newsjournal">
             <!-- newsjournal item -->
 
+            <div class="newsjournal-container">
+              <div class="newsjournal-dot"></div>
+              <div class="newsjournal-year">2025</div>
+            </div>
+
+             <!-- Jan 2025 -->
+             <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-date month">January</div>
+
+              <div class="timeline-content">
+                <p> A new funding recieved - <a
+                    href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false'
+                    target="_blank">NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for
+                    Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>,
+                  on Large Language Models and Planning (see also: <a
+                    href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
+                    target="_blank">project page</a>).
+                </p>
+              </div>
+
+
+              <div class="timeline-content">
+                <p>Our <a
+                    href='publications/papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf'
+                    target="_blank">paper</a>, 'On Generalized Planning for Controlling Opinion Networks:
+                  Interpreting Human-AI Dialog States and Beliefs' is accepted in the AAAI-25 <a
+                    href="https://aair-lab.github.io/genplan25/">Generalization in Planning Workshop</a>.
+                </p>
+              </div>
+
+              <div class="timeline-content">
+                <p>Our <a href='publications/papers_local/AAAI_25_SafeChat_Workshop.pdf'
+                    target="_blank">paper</a>, 'Disseminating Authentic Public Messages using Chatbots - A Case
+                  Study with ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
+                  Information in South Carolina' is accepted in the AAAI-25 <a
+                    href="https://sites.google.com/view/ai-public-missions-workshop">AI for Public Missions
+                    Workshop</a>.
+                </p>
+              </div>
+
+            </div>
+
+            <!-- End of Jan 2025 -->
+
             <!-----2024-->
             <div class="newsjournal-container">
               <div class="newsjournal-dot"></div>
