--- a/index.html
+++ b/index.html
@@ -110,6 +110,29 @@
                       <div class="timeline-date year">2025</div>
                     </div>
 
+                    <!-- March 2025 -->
+                    <div class="timeline-item">
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-date month">March</div>
+
+                      
+
+                      <div class="timeline-content">
+                        <p>Our paper, 'Do Voters Get the Information They Want? Understanding Authentic Voter FAQs in the US and How to Improve for Informed Electoral Participation' is accepted at TrustNLP workshop in NAACL 2025.
+                        </p>
+                      </div>
+
+                      <div class="timeline-content">
+                        <p>Our <a
+                            href='publications/papers_local/litevol.pdf'
+                            target="_blank">paper</a>, 'Revisiting LLMs in Planning from Literature Review: a Semi-Automated Analysis Approach and Evolving Categories Representing Shifting Perspectives' is accepted at ICAPS 2025 (AR=22.8%).
+                        </p>
+                      </div>
+
+
+                    </div>
+                    <!-- End of March 2025 -->
+
                     <!-- Feb 2025 -->
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
@@ -149,46 +172,6 @@
 
                     </div>
                     <!-- End of Feb 2025 -->
-
-                    <!-- Jan 2025 -->
-                    <div class="timeline-item">
-                      <div class="timeline-dot"></div>
-                      <div class="timeline-date month">January</div>
-
-                      <div class="timeline-content">
-                        <p> A new funding recieved - <a
-                            href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false'
-                            target="_blank">NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for
-                            Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>,
-                          on Large Language Models and Planning (see also: <a
-                            href='https://nairrpilot.org/projects/demo/compact-foundation-model-for-pl-tasks'
-                            target="_blank">project page</a>).
-                        </p>
-                      </div>
-
-
-                      <div class="timeline-content">
-                        <p>Our <a
-                            href='publications/papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf'
-                            target="_blank">paper</a>, 'On Generalized Planning for Controlling Opinion Networks:
-                          Interpreting Human-AI Dialog States and Beliefs' is accepted in the AAAI-25 <a
-                            href="https://aair-lab.github.io/genplan25/">Generalization in Planning Workshop</a>.
-                        </p>
-                      </div>
-
-                      <div class="timeline-content">
-                        <p>Our <a href='publications/papers_local/AAAI_25_SafeChat_Workshop.pdf'
-                            target="_blank">paper</a>, 'Disseminating Authentic Public Messages using Chatbots - A Case
-                          Study with ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
-                          Information in South Carolina' is accepted in the AAAI-25 <a
-                            href="https://sites.google.com/view/ai-public-missions-workshop">AI for Public Missions
-                            Workshop</a>.
-                        </p>
-                      </div>
-
-                    </div>
-
-                    <!-- End of Jan 2025 -->
 
                   </div>
 
@@ -249,13 +232,13 @@
                 </td>
               </tr>
 
-              <tr style="padding:0px">
+              <!-- <tr style="padding:0px">
                 <td colspan="2" style="padding-left:2.5%; width:100%; vertical-align:top;">
                   <div class="schedule-container">
                     <h2 style="text-align: center; color: #2c3e50; font-size: 1.8em;">AAAI-25 Schedule</h2>
-                    <div class="schedule-grid">
+                    <div class="schedule-grid"> -->
                       <!-- Dates Sidebar -->
-                      <div class="date-sidebar">
+                      <!-- <div class="date-sidebar">
                         <div class="date-tab" onclick="showDetails(event, 'Feb 24')">Feb 24</div>
                         <div class="date-tab" onclick="showDetails(event, 'Feb 25')">Feb 25</div>
                         <div class="date-tab" onclick="showDetails(event, 'Feb 26')">Feb 26</div>
@@ -265,13 +248,13 @@
                         <div class="date-tab" onclick="showDetails(event, 'Mar 2')">Mar 2</div>
                         <div class="date-tab" onclick="showDetails(event, 'Mar 3')">Mar 3</div>
                         <div class="date-tab" onclick="showDetails(event, 'Mar 4')">Mar 4</div>
-                      </div>
+                      </div> -->
                       <!-- Event Details Section -->
-                      <div class="event-details" id="event-details">Select a date to view schedule.</div>
+                      <!-- <div class="event-details" id="event-details">Select a date to view schedule.</div>
                     </div>
                   </div>
                 </td>
-              </tr>
+              </tr> -->
 
               <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
@@ -295,7 +278,7 @@
       </td>
     </tbody>
   </table>
-  <script>
+  <!-- <script>
 
     function showDetails(event, date) {
       const scheduleData = {
@@ -335,10 +318,10 @@
       document.getElementById('event-details').innerHTML = scheduleData[date] || "<strong>No events scheduled.</strong>";
       document.querySelectorAll('.date-tab').forEach(tab => tab.classList.remove('active'));
       event.target.classList.add('active');
-    }
+    } -->
 
 
-
+  <script>
 
     // Image Slideshow Variables
     var slideIndex = 0;
