Update index.html for Nitin profile

--- a/members/index.html
+++ b/members/index.html
@@ -177,7 +177,7 @@
                         <img src="images_members/nitin.jpg">
                         <figcaption style="padding-top: -10%;">
                             <b>Nitin Gupta</b><br><br>
-                            <a target="_blank" href="https://www.linkedin.com/in/niting9/">Homepage</a>,
+                            <a target="_blank" href="https://g-nitin.github.io/portfolio/">Homepage</a>,
                             <a target="_blank" href="mailto:niting@email.sc.edu">niting@email.sc.edu</a>
                             <br><br>
                             Research Interests:
