rating page, publications

--- a/demos/index.html
+++ b/demos/index.html
@@ -169,13 +169,7 @@
           <div style="flex:1">
             <h3 class="card-text">ARC: A Tool to Rate AI Systems for Bias Through a Causal Lens
               | 2024 <span class="tag tag-method">Trusted AI</span></h3>
-            <p>As Artificial Intelligence (AI) systems are becoming powerful,
-              there is a growing concern about these data-driven systems
-              with respect to trust issues like exhibiting biasing which
-              may adversely impact their large-scale adoption. Here bias
-              may be with respect to protected attributes such as well-studied
-              gender, race, and age. In this paper, we introduce
-              ARC, a tool to rate AI systems for bias through a causal lens.
+            <p>We introduce ARC, a tool to rate AI systems for bias through a causal lens.
               The main objective of the tool is to assist developers in building
               better models and aid end-users in making informed decisions
               based on the available data. The tool is extensible and
