--- a/publications/index.html
+++ b/publications/index.html
@@ -168,7 +168,7 @@
                             <li><b>Disseminating Authentic Public Messages using Chatbots - A Case Study with
                                     ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
                                     Information in South Carolina</b>
-                                <<br>
+                                <br>
                                 <i>AI for Public Mission Workshop at the Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
                                     Feb 2025</i><br>
                                 Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav
@@ -181,6 +181,25 @@
                                 <br>
                             </li>
 
+                            <li><b>On Creating a Causally Grounded Usable Rating Method for Assessing the Robustness of Foundation Models Supporting Time Series</b>
+                            </i><br>
+                            Kausik Lakkaraju, Rachneet Kaur, Parisa Zehtabi, Sunandita Patra, Siva Likitha Valluru, Zhen Zeng, Biplav Srivastava, Marco Valtorta
+                            <br>
+                            <a href='https://arxiv.org/abs/2412.17910' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Preprint</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <span class="tag tag-method">Finance</span>
+                            <br>
+
+                            <li><b>Rating Multi-Modal Time-Series Forecasting Models (MM-TSFM) for Robustness Through a Causal Lens</b>
+                            </i><br>
+                            Kausik Lakkaraju, Rachneet Kaur, Zhen Zeng, Parisa Zehtabi, Sunandita Patra, Biplav Srivastava, Marco Valtorta
+                            <br>
+                            <a href='https://arxiv.org/abs/2412.17910' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Preprint</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <span class="tag tag-method">Finance</span>
+                            <br>
                             
                         </ul>
 
