--- a/projects/index.html
+++ b/projects/index.html
@@ -73,7 +73,7 @@
                             <span class="tag tag-method">Automated Planning</span>
                         </h3>
                         <i><b>Team: </b>University of South Carolina, IBM Research, University of Udine, University of Brescia</i>
-                        <p><b>Description: </b>The Fast and Slow AI (SOFAI) architecture draws inspiration from cognitive theories discussed by Daniel Kahneman in ‘Thinking Fast and Slow.’ This project aims to develop AI-supported machines that can replicate human decision-making behaviors and provide assistance through nudging and explanations. By creating a cognitive architecture that encompasses both fast (S1) and slow (S2) decision-making modalities, the team seeks to enhance problem-solving capabilities, outperforming traditional symbolic planners like FastDownward.</p>
+                        <p><b>Description:</b> A suite of projects aimed at building foundation models and agentic frameworks that can reason, plan, and adapt across diverse domains. Our work spans the development of transformer-based architectures for learning sequential decision-making tasks, the design of agentic frameworks inspired by <i>Thinking, Fast and Slow</i> theories, and the creation of ontologies to support structured reasoning and planning.</p>
                             <span>
                                 <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./generalized_planning/index.html" target="_blank"><b>More Details</b></a>
                             </span>
